--- a/callmatics.html
+++ b/callmatics.html
@@ -28,27 +28,7 @@
   <!-- Utils (Optional) -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.19/js/utils.js"></script>
 
-  <style>
-    .h20 {
-      height: 60vh;
-      width: 100%;
-      background-repeat: no-repeat;
-      /* object-fit: cover; */
-      background-position: center !important;
-      background-image: url("Assets/Banner-Image/banner-img-16.png");
-    }
-    input,.form-control{
-      border: 1px solid rgb(196, 196, 196) !important;
-      background-color: white !important;
 
-    }
-    .phonenum{
-      color: black !important;
-    }
-    .form-control::placeholder{
-      color: black !important;
-    }
-  </style>
 </head>
 
 <body>
@@ -59,90 +39,95 @@
 
   </a>
 
-  <!-- TOP-ANIMATION -->
 
-  <!-- TOP-ANIMATION -->
+<!-- MAIN 1 START -->
+<div class="container-fluid  mb-5 d-flex flex-column align-items-center justify-content-center">
+  <img src="Assets/Banner-Image/banner-img-16.png" class="m-0 p-0 w-100 position-absolute h20 " alt="">
+<!-- NAVBAR START -->
+<nav class="navbar navbar-expand-lg px-0 py-2 container-fluid d-flex flex-column" id="navbar">
+  <div class="container-fluid d-flex flex-row justify-content-between">
+    <!-- Logo -->
+    <a class="navbar-brand " href="#">
+      <img src="assets/Logo/logo.png" alt="Logo" class="col-lg-2 col-2 pe-lg-3" />
 
-  <!-- TOP -->
-  <!-- NAVBAR -->
+    </a>
 
-  <!-- NAVBAR -->
-  <nav class="navbar navbar-expand-lg px-0 py-2 container-fluid d-flex flex-column" id="navbar">
-    <div class="container-fluid d-flex flex-row justify-content-between">
-      <!-- Logo -->
-      <a class="navbar-brand" href="#">
-        <img src="assets/Logo/logo.png" alt="Logo" class="col-lg-2 col-2" />
+    <!-- Toggler Button -->
 
-      </a>
+<button class="btn btn-red navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
+<i class="fa-solid fa-bars"></i>
+</button>
+    <!-- Collapsible Navbar Content -->
+    <div class="collapse sdsd navbar-collapse d-flex flex-row " id="navbarSupportedContent">
+      <ul class="navbar-nav  mt-2 mb-lg-0 d-lg-flex d-none">
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="index.html">Home</a>
+          <span class="navhover"></span>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Service
+          </a>
+          <span class="navhover"></span>
+          <ul class="dropdown-menu mx-auto">
+            <li><a class="dropdown-item nav-link" href="AiProductSolution.html">AiProductSolution
+          
 
-      <!-- Toggler Button -->
-      <button class="btn btn-red navbar-toggler" type="button" data-bs-toggle="offcanvas"
-        data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
-        <i class="fa-solid fa-bars"></i>
-      </button>
 
-      <!-- Collapsible Navbar Content -->
-      <div class="collapse sdsd navbar-collapse d-flex flex-row justify-content-end" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mt-2 mb-lg-0 d-lg-flex d-none">
-          <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="index.html">Home</a>
-            <span class="navhover"></span>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Service
-            </a>
-            <span class="navhover"></span>
-            <ul class="dropdown-menu mx-auto">
-              <li><a class="dropdown-item nav-link" href="AiProductSolution.html">AiProductSolution</a></li>
-              <li><a class="dropdown-item nav-link" href="GrcSolution.html">GRC Solutions</a></li>
-              <li><a class="dropdown-item nav-link" href="Web-AppDevelopment.html">Web & App Development</a></li>
-              <li><a class="dropdown-item nav-link" href="EcommerceSolution.html">Ecommerce Solutions</a></li>
-              <li><a class="dropdown-item nav-link" href="DigitalMarketing.html">
-                  Digital Marketing</a></li>
+            </a></li>
+            <li><a class="dropdown-item nav-link" href="GrcSolution.html">GRC Solutions</a></li>
+            <li><a class="dropdown-item nav-link" href="Web-AppDevelopment.html">Web & App Development</a></li>
+            <li><a class="dropdown-item nav-link" href="EcommerceSolution.html">Ecommerce Solutions</a></li>
+            <li><a class="dropdown-item nav-link" href="DigitalMarketing.html">
+                Digital Marketing</a></li>
 
-            </ul>
-          </li>
-          <li class="nav-item ">
-            <a class="nav-link" href="about.html" aria-expanded="false">
-              About-Us
-            </a>
-            <span class="navhover"></span>
-            <!-- <ul class="dropdown-menu mx-auto">
-              <li><a class="dropdown-item nav-link" href="memberships/ScoutMemberships.html">Cybron Scout
-                  Memberships</a></li>
-              <li><a class="dropdown-item nav-link" href="memberships/AssociateMemberships.html">Cybron Associate
-                  Memberships</a></li>
-              <li><a class="dropdown-item nav-link" href="memberships/ProfessionalMemberships.html">Cybron Professional
-                  Memberships</a></li>
-            </ul> -->
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="portfolio.html">Portfolio</a>
-            <span class="navhover"></span>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact Us</a>
-            <span class="navhover"></span>
-          </li>
-        </ul>
+          </ul>
+        </li>
+        <li class="nav-item ">
+          <a class="nav-link" href="about.html" aria-expanded="false">
+            About-Us
+          </a>
+          <span class="navhover"></span>
+      
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="portfolio.html">Portfolio</a>
+          <span class="navhover"></span>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">Contact Us</a>
+          <span class="navhover"></span>
+        </li>
+      </ul>
 
-        <!-- Offcanvas Button -->
-        <form class="d-flex " role="search">
-          <div class="input-group">
-            <button class="btn btn-red" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight1"
-              aria-controls="offcanvasRight1">
-              <i class="fa-solid fa-bars"></i>
-            </button>
-          </div>
-        </form>
-      </div>
+      <!-- Offcanvas Button -->
+      <form class="d-lg-flex d-none ms-auto " role="search">
+        <div class="input-group">
+          <button class=" btn-red" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight1"
+            aria-controls="offcanvasRight1">
+            <i class="fa-solid fa-bars"></i>
+          </button>
+        </div>
+      </form>
     </div>
-    <!-- Optional Element -->
-    <div class="" id="navunder"></div>
-  </nav>
+  </div>
+  <!-- Optional Element -->
+  <div class="" id="navunder"></div>
+</nav>
+<!-- NAVBAR END-->
 
-  <!-- NAVBAR -->
+<!-- MAIN SUB DIV START -->
+  <!-- BANNER START -->
+  <div class="container-fluid home d-flex flex-column align-items-center justify-content-center  h20 pb-0">
+    <h2 class="text-white mb-3 display-2 fw-bold">CallmATICS<sup class="col-org">TM</sup> </h2>
+    <h4 class="text-white  ">Home / CallmATICS </h4>
+  </div>
+  <!-- BANNER END -->
+
+<!-- MAIN SUB DIV END -->
+
+ </div>
+ <!-- MAIN 1 END -->
   <!-- INFO CANVAS -->
   <div class="offcanvas offcanvas-end who1 " tabindex="-1" id="offcanvasRight1" aria-labelledby="offcanvasRightLabel">
     <div class="offcanvas-header">
@@ -275,12 +260,7 @@
     </div>
   </div>
   <!-- OFFCANVAS -->
-  <!-- BANNER START -->
-  <div class="container-fluid home d-flex flex-column align-items-center justify-content-center  h20 pb-0">
-    <h2 class="text-white mb-3 display-2 fw-bold">CallmATICS<sup class="col-org">TM</sup> </h2>
-    <h4 class="text-white  ">Home / CallmATICS </h4>
-  </div>
-  <!-- BANNER END -->
+
 
   <div class="container-fluid  over py-5 px-2 d-flex flex-lg-row flex-column">
     <div class="col-lg-3 who p-2 sticky-element border-radious">
