--- a/AiProductSolution.html
+++ b/AiProductSolution.html
@@ -676,6 +676,90 @@
                 </div>
             </div>
 
+            <div class="col-lg-12 col-md-12 d-flex flex-lg-row flex-column cardsss py-4 mb-2">
+                <h3 class="text-white1 pe-2 mt-lg-2 col-lg-2 px-2 text-center ">04.</h3>
+                <div class="d-flex text-white1 flex-column col-lg-6 col-12">
+                    <h2 class="text-white1 fw-bold  pb-3 display-6 head-2 text-lg-start text-center">planetSCAN <sup
+                            class="col-org">TM</sup> </h2>
+                    <div class="tags d-flex flex-row justify-content-between col-lg-7">
+                        <p class="">AIHelp</p>
+                        <p>CallAI</p>
+                        <p>AIChat</p>
+                        <p>AutoCC</p>
+
+                    </div>
+
+                    <div>
+                        <p class="pt-3 col-lg-12 fs-6 fw-normal">
+                            An AI & Most Modern GIS Technologies based solution to analyze satellite imagery in unprecedented ways to derive various demographic and social metrics for a given location. Count objects & features, classify a city into different settlement types e.g. Apartment vs Villas vs Small Homes, Slums Vs Planned Settled areas, residential Vs industrial. Analyze Agriculture Land and Crop, Analysis of Land utilization Parks Vs Sports Fields Vs Water Ways. </p>
+                    </div>
+                    <div class="col-12 mb-3">
+                        <img src="Assets/Service-Image/service-img-09.jpg" class="img-fluid rounded-3 col-12" alt="">
+                    </div>
+                </div>
+                <div
+                    class="col-lg-4 col-12 d-flex flex-column justify-content-between  align-items-end mt-lg-0 mt-2   flex-row ">
+
+                    <button class="mx-lg-0 mx-auto col-lg-5 col-5 set-bt btn-explore  ">
+                        More-Info
+                        <a href="plannet_scan.html"
+                            class="ex-cion d-flex flex-row align-items-center justify-content-center text-decoration-none">
+                            <i class="fa-solid fa-paper-plane"></i>
+                        </a>
+                    </button>
+
+                    <div class="col-9 ms-lg-auto d-flex flex-column align-items-end  p-2 text-white py-5">
+                        <h3 class="text-white1 text-end mb-4">For Inquiry</h3>
+                        <input type="text" class="form-control my-2 mb-3 col-10" placeholder="Your Name" name="name"
+                            id="name">
+                        <input type="email" class="form-control mb-2 mb-3 col-10" placeholder="Your Email" name="email"
+                            id="email">
+
+
+                        <input id="phone" type="tel" class="phonenum mb-3 col-12 mb-3">
+                        <div class="col-12 text-center  mt-2">
+                            <button type="submit"
+                                class="mt-3 mx-auto who text-white1 btn3 col-lg-6 col-6 p-2 d-flex flex-row align-items-center justify-content-center">
+                                Submit
+                                <i class="fa-solid fa-paper-plane icon-hover"></i>
+
+                            </button>
+                        </div>
+
+                    </div>
+                </div>
+                <div
+                    class="col-lg-4 col-12 d-flex flex-column justify-content-between  align-items-end mt-lg-0 mt-2   flex-row ">
+
+                    <button class="mx-lg-0 mx-auto col-lg-5 col-5 set-bt btn-explore  ">
+                        More-Info
+                        <a href="buoylight.html"
+                            class="ex-cion d-flex flex-row align-items-center justify-content-center text-decoration-none">
+                            <i class="fa-solid fa-paper-plane"></i>
+                        </a>
+                    </button>
+
+                    <div class="col-9 ms-lg-auto d-flex flex-column align-items-end  p-2 text-white py-5">
+                        <h3 class="text-white1 text-end mb-4">For Inquiry</h3>
+                        <input type="text" class="form-control my-2 mb-3 col-10" placeholder="Your Name" name="name"
+                            id="name">
+                        <input type="email" class="form-control mb-2 mb-3 col-10" placeholder="Your Email" name="email"
+                            id="email">
+
+
+                        <input id="phone" type="tel" class="mb-3 col-12 mb-3">
+                        <div class="col-12 text-center  mt-2">
+                            <button type="submit"
+                                class="mt-3 mx-auto who text-white1 btn3 col-lg-6 col-6 p-2 d-flex flex-row align-items-center justify-content-center">
+                                Submit
+                                <i class="fa-solid fa-paper-plane icon-hover"></i>
+
+                            </button>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
         </div>
      
     </div>
