--- a/buoyspy.html
+++ b/buoyspy.html
@@ -265,83 +265,9 @@
 
 <!-- ======================== MAIN 1 START ======================== -->
 <section>
-  <div class="container-fluid  mb-5 d-flex flex-column align-items-center justify-content-center">
-    <img src="Assets/images/Banner-Image/banner-img-15.png" class="m-0 p-0 w-100 position-absolute  " alt="">
-  <!-- ======================== NAVBAR START ======================== -->
-      <!-- ======================== NAVBAR START ======================== -->
-      <nav class="navbar navbar-expand-lg px-0 py-2 container-fluid d-flex flex-column" id="navbar">
-        <div class="container-fluid d-flex flex-row justify-content-between">
-          <!-- ======================== Logo ======================== -->
-          <a class="col-lg-3 col-9" href="#">
-            <img src="Assets/images/Logo/Ai-SS-Logo.jpg" alt="Logo" class="col-lg-3 col-2 " />
-  
-          </a>
-  
-          <!-- ======================== Toggler Button ======================== -->
-  
-          <button class="btn btn-red navbar-toggler" type="button" data-bs-toggle="offcanvas"
-            data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
-            <i class="fa-solid fa-bars"></i>
-          </button>
-          <!-- ======================== Collapsible Navbar Content ======================== -->
-          <div class="collapse ps-lg-5 sdsd navbar-collapse d-flex flex-row " id="navbarSupportedContent">
-            <ul class="navbar-nav  mt-2 mb-lg-0 d-lg-flex d-none">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="index.html">Home</a>
-                <span class="navhover"></span>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                  aria-expanded="false">
-                  Service
-                </a>
-                <span class="navhover"></span>
-                <ul class="dropdown-menu mx-auto">
-                  <li><a class="dropdown-item nav-link" href="Ai-Product-Solution.html">Ai Product Solution
-  
-  
-  
-                    </a></li>
-                  <li><a class="dropdown-item nav-link" href="GRC-Services.html">GRC Services</a></li>
-                  <li><a class="dropdown-item nav-link" href="Web-AppDevelopment.html">AI Driven  Web & App Development</a></li>
-  
-  
-                </ul>
-              </li>
-              <li class="nav-item ">
-                <a class="nav-link" href="about.html" aria-expanded="false">
-                  About Us
-                </a>
-                <span class="navhover"></span>
-  
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="portfolio.html">Portfolio</a>
-                <span class="navhover"></span>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact Us</a>
-                <span class="navhover"></span>
-              </li>
-            </ul>
-  
-            <!-- ======================== Offcanvas Button ======================== -->
-            <form class="d-lg-flex d-none ms-auto " role="search">
-              <div class="input-group">
-                <button class=" btn-red" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight1"
-                  aria-controls="offcanvasRight1">
-                  <i class="fa-solid fa-bars"></i>
-                </button>
-              </div>
-            </form>
-          </div>
-        </div>
-        <!-- ======================== Optional Element ======================== -->
-        <div class="" id="navunder"></div>
-      </nav>
-      <!-- ======================== NAVBAR END======================== -->
-  <!-- ======================== NAVBAR END======================== -->
-  
+  <div class="container-fluid home  d-flex flex-column align-items-center justify-content-center">
+    <img src="Assets/images/Banner-Image/banner-img-15.png" class="m-0 p-0 w-100 position-absolute banner-img " alt="">
+
   <!-- ======================== MAIN SUB DIV START ======================== -->
     <!-- ======================== BANNER START ======================== -->
     <div class="container-fluid home d-flex flex-column align-items-center justify-content-center   pb-0">
@@ -359,7 +285,7 @@
 
 <!-- ================================ MAIN 1 START ============= -->
  
-<div class="container-fluid  over py-5 px-2 d-flex flex-lg-row flex-column">
+<div class="container-fluid  over pb-5 px-2 d-flex flex-lg-row flex-column">
   <div class="col-lg-3 who p-2 sticky-element border-radious">
     <h3 class="text-white1 px-2 py-3">AI Product Solution</h3>
     <!-- ========================  ======================== -->
