--- a/index.html
+++ b/index.html
@@ -438,8 +438,8 @@
   <!-- ======================== SERVICE & PORTFOLIO START ======================== -->
   <section>
     <div class="container-fluid d-flex flex-wrap cardss">
-      <div class="col-lg-6 col-12 my-2  cardss1">
-        <div class="col-lg-11 col-12 d-flex flex-row">
+      <div class="col-lg-12 col-12 my-2  cardss1">
+        <div class="col-lg-6 col-12 d-flex flex-row">
           <div class="col-2 col-22 d-flex flex-row align-items-center justify-content-center">
 
             <i class="fa-solid fa-robot my-4   d-flex flex-row align-items-center"></i>
@@ -472,8 +472,8 @@
         </div>
       </div>
 
-      <div class="col-lg-6 col-12 my-2  mt-lg-5 cardss1">
-        <div class="col-lg-11 col-12 d-flex flex-row">
+      <div class="col-lg-12 col-12 my-2   cardss1 d-flex flex-row justify-content-end">
+        <div class="col-lg-6 col-12 d-flex flex-row">
           <div class="col-2 col-22 d-flex flex-row align-items-center justify-content-center">
             <i class="fas fa-balance-scale my-4   d-flex flex-row align-items-center "></i>
           </div>
@@ -505,8 +505,8 @@
         </div>
         <div class="cardss-hover"></div>
       </div>
-      <div class="col-lg-6 col-12 my-2 mt-lg-5  cardss1">
-        <div class="col-lg-11 col-12 d-flex flex-row">
+      <div class="col-lg-12 col-12 my-2   cardss1">
+        <div class="col-lg-6 col-12 d-flex flex-row">
           <div class="col-2 col-22 d-flex flex-row align-items-center justify-content-center">
             <i class="fa fa-code my-4   d-flex flex-row align-items-center "></i>
           </div>
