--- a/contact.html
+++ b/contact.html
@@ -261,7 +261,7 @@
     
 <!-- ======================== MAIN 1 START ======================== -->
 <section>
-  <div class="container-fluid home mb-5 d-flex flex-column align-items-center justify-content-center">
+  <div class="container-fluid home d-flex flex-column align-items-center justify-content-center">
    <!-- =============================== BANNER IMAGE START =========================================== -->
  <img src="Assets/images/Banner-Image/banner-img-17.jpg" class="m-0  p-0 w-100 position-absolute banner-img " alt="">
     <!-- =============================== BANNER IMAGE END =========================================== -->
@@ -281,7 +281,13 @@
    </div>
 </section>
  <!-- ======================== MAIN 1 END ======================== -->
-
+<!-- ======================== MAP START ======================== -->
+<section>
+  <div class="container-fluid m-0 p-0 ">
+    <iframe class="col-12" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3506.530119805925!2d-81.51001662389079!3d28.493694175740895!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88e77ed1863281cf%3A0x80aa2af03e1c4035!2sConroy%20Rd%2C%20Windermere%2C%20FL%2034786%2C%20USA!5e0!3m2!1sen!2s!4v1739033535734!5m2!1sen!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+   </div>
+</section>
+<!-- ======================== MAP END ======================== -->
   <!-- ======================== CONTACT-US START ======================== -->
   <section>
     <div
@@ -405,13 +411,7 @@
   </section>
   <!-- ======================== CONTACT-US END ======================== -->
 
-<!-- ======================== MAP START ======================== -->
-<section>
-  <div class="container-fluid m-0 p-0 py-5 ">
-    <iframe class="col-12" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3506.530119805925!2d-81.51001662389079!3d28.493694175740895!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88e77ed1863281cf%3A0x80aa2af03e1c4035!2sConroy%20Rd%2C%20Windermere%2C%20FL%2034786%2C%20USA!5e0!3m2!1sen!2s!4v1739033535734!5m2!1sen!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-   </div>
-</section>
-<!-- ======================== MAP END ======================== -->
+
   <!-- ======================== OUR PRODUCT START======================== -->
 <section>
   <div class="container-fluid roun my-5 p-3  bg d-flex flex-row justify-content-center align-items-center">
