--- a/index.html
+++ b/index.html
@@ -437,8 +437,9 @@
   </section>
   <!-- ======================== SERVICE & PORTFOLIO START ======================== -->
   <section>
-    <div class="container-fluid d-flex flex-wrap cardss">
-      <div class="col-lg-12 col-12 my-2  cardss1">
+    <div class="container-fluid d-flex flex-column cardss">
+      <div class="col-lg-12 col-12 my-2 d-flex flex-lg-row flex-column  cardss1">
+        <!-- ================ AI PRODUCT & SOLUTION START   ================-->
         <div class="col-lg-6 col-12 d-flex flex-row">
           <div class="col-2 col-22 d-flex flex-row align-items-center justify-content-center">
 
@@ -470,10 +471,10 @@
           </div>
           <div class="cardss-hover">fgfg</div>
         </div>
-      </div>
-
-      <div class="col-lg-12 col-12 my-2   cardss1 d-flex flex-row justify-content-end">
-        <div class="col-lg-6 col-12 d-flex flex-row">
+        <!-- ================ AI PRODUCT & SOLUTION END ================ -->
+       
+        <!-- ================ GRC SERVICES  START   ================-->
+        <div class="col-lg-6 col-12 d-flex flex-row mt-lg-5 pt-lg-5">
           <div class="col-2 col-22 d-flex flex-row align-items-center justify-content-center">
             <i class="fas fa-balance-scale my-4   d-flex flex-row align-items-center "></i>
           </div>
@@ -503,10 +504,13 @@
             </div>
           </div>
         </div>
-        <div class="cardss-hover"></div>
+        <!-- ================ GRC SERVICES END ================ -->
+
       </div>
+
+
       <div class="col-lg-12 col-12 my-2   cardss1">
-        <div class="col-lg-6 col-12 d-flex flex-row">
+        <div class="col-lg-6 col-12 d-flex flex-row mt-lg-5 pt-lg-3">
           <div class="col-2 col-22 d-flex flex-row align-items-center justify-content-center">
             <i class="fa fa-code my-4   d-flex flex-row align-items-center "></i>
           </div>
