--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <div class="container-fluid d-flex flex-row justify-content-between">
         <!-- ======================== Logo ======================== -->
         <a class="col-lg-3 col-9" href="#">
-          <img src="Assets/images/Logo/Ai-SS-Logo.jpg" alt="Logo" class="col-lg-3 col-2 " id="logo" />
+          <img src="Assets/images/Logo/Ai-SS-Logo.jpg" alt="Logo" class="col-lg-4 col-2 " id="logo" />
 
 
         </a>
@@ -65,24 +65,26 @@
               <span class="navhover"></span>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                aria-expanded="false">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Service
               </a>
-              <span class="navhover"></span>
-              <ul class="dropdown-menu mx-auto">
-                <li><a class="dropdown-item nav-link" href="Ai-Product-Solution.html">Ai Product Solution
-
-
-
-                  </a></li>
-                <li><a class="dropdown-item nav-link" href="GRC-Services.html">GRC Services</a></li>
-                <li><a class="dropdown-item nav-link" href="Web-AppDevelopment.html">AI Driven Web & App Development</a>
+              <ul class="dropdown-menu">
+                <li class="dropdown-submenu">
+                  <a class="dropdown-item dropdown-toggle" href="Ai-Product-Solution.html" role="button">
+                    Ai Product Solution </i>
+                  </a>
+                  <ul class="dropdown-menu1 list-unstyled child-dropdown">
+                    <li><a class="dropdown-item" href="buoylight.html">buoylight</a></li>
+                    <li><a class="dropdown-item" href="b">Submenu Item 2</a></li>
+                    <li><a class="dropdown-item" href="#">Submenu Item 3</a></li>
+                    <li><a class="dropdown-item" href="#">Submenu Item 4</a></li>
+                  </ul>
                 </li>
-
-
+                <li><a class="dropdown-item" href="GRC-Services.html">GRC Services</a></li>
+                <li><a class="dropdown-item" href="Web-AppDevelopment.html">AI Driven Web & App Development</a></li>
               </ul>
             </li>
+            
             <li class="nav-item ">
               <a class="nav-link" href="about.html" aria-expanded="false">
                 About Us
@@ -516,7 +518,7 @@
           </div>
           <div class="col-10 ms-2 py-4">
 
-            <h2 class="d-flex flex-row align-items-center ">AI Driven AI Driven Web & App Development</h2>
+            <h2 class="d-flex flex-row align-items-center "> AI Driven Web & App Development</h2>
             <p class=" col-lg-11 col-12 py-3  paraa-1 fw-normal fs-6 ">We have senior team of developers and architects
               that can enable
               your websites through cutting-edge AI
