--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
                         <span class="navhover"></span>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                        <a class="nav-link dropdown-toggle  d-flex justify-content-between align-items-center btn" href="#" role="button" data-bs-toggle="dropdown"
                            aria-expanded="false">
                             Service
                         </a>
                         <span class="navhover"></span>
                         <ul class="dropdown-menu mx-auto">
                             <li class="dropdown-submenu">
-                                <a class="dropdown-item  dropdown-toggle nav-link" href="Ai-Product-Solution.html">
+                                <a class="dropdown-item  dropdown-toggle nav-link  d-flex justify-content-between align-items-center btn" href="Ai-Product-Solution.html">
                                     Ai Product Solution  </a>
                            
                                     <ul class="dropdown-menu1 list-unstyled child-dropdown">
@@ -85,7 +85,7 @@
                                         
                                       </ul>
                                 </li>
-                            <li  class="dropdown-submenu"><a class="dropdown-item  dropdown-toggle nav-link" href="GRC-Services.html">GRC Services</a>
+                            <li  class="dropdown-submenu"><a class="dropdown-item  dropdown-toggle nav-link  d-flex justify-content-between align-items-center btn" href="GRC-Services.html">GRC Services</a>
                              <ul class="dropdown-menu1 list-unstyled child-dropdown">
                                         <li><a class="dropdown-item" href="Governance_Framework_implementations.html">
                                               Governance Framework <br> implementations</a></li>
